# jnp-zad6

./: .gitignore  CMakeLists.txt  a.out  computer.cc  computer.h  factory.cc  factory.h  flag_handler.cc  flag_handler.h  id.h  memory.cc  memory.h  ooasm.cc  ooasm.h  program.h  test_grzesiek.cpp  test_rafal.cpp
